--- a/index.html
+++ b/index.html
@@ -3,82 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: white;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-
-        h1 {
-            color: #0073e6;
-        }
-
-        p {
-            font-size: 18px;
-            margin-top: 10px;
-        }
-
-        .social-links {
-            margin-top: 20px;
-        }
-
-        .social-links a {
-            display: inline-block;
-            margin: 10px;
-            text-decoration: none;
-            color: white;
-            background: #0073e6;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .social-links a:hover {
-            background: #005bb5;
-        }
-
-        footer {
-            margin-top: 20px;
-            font-size: 14px;
-            color: #777;
-        }
-    </style>
+    <title>My Interactive Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
 
-    <div class="container">
-        <h1>👋 Welcome to My Website!</h1>
-        <p>Hello! I'm <strong>Your Name</strong>, a software engineer passionate about technology and problem-solving.</p>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo">My Portfolio</div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-        <div class="social-links">
-            <a href="https://github.com/your-username" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
-            <a href="mailto:your-email@example.com">Email Me</a>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <h1>Hi, I'm <span>Your Name</span></h1>
+        <p>Software Engineer | Web Developer</p>
+        <a href="#projects" class="btn">View My Work</a>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a passionate developer who loves creating interactive websites.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-grid">
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Short description of the project.</p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Short description of the project.</p>
+            </div>
         </div>
-        
-        <footer>
-            <p>© 2025 Your Name. All rights reserved.</p>
-        </footer>
-    </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: your-email@example.com</p>
+    </section>
 
 </body>
 </html>
