--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <h1>Hi, I'm <span>Your Name</span></h1>
-        <p>Software Engineer | Web Developer</p>
+        <h1>Hi, I'm <span>Kamalesh</span></h1>
+        <p>Software Engineer | Data Scientist</p>
         <a href="#projects" class="btn">View My Work</a>
     </section>
 
@@ -51,7 +51,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: your-email@example.com</p>
+        <p>Email: kamaleshblr@gmail.com</p>
     </section>
 
 </body>
