--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tsubasa Neko Portfolio</title>
+    <title>Kamalesh</title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body class="bg-white text-gray-800">
